<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp"
    android:background="@color/dark_space">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/onboarding_dna"
        android:contentDescription="@string/dna" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/onboarding_title2"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:fontFamily="@font/orbitron_bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/onboarding_subtitle2"
        android:textColor="@color/text_secondary"
        android:textSize="16sp"
        android:lineSpacingExtra="4dp" />
</LinearLayout>